--- a/src/index.sass
+++ b/src/index.sass
@@ -8,6 +8,10 @@ body
     background: var(--bg-secondary-color)
 
 :root
+    --header-height: 4rem
+    --content-width: 1000px
+    --always-white: #fff
+    --always-black: #000
     --bg-main-color: #fff
     --bg-secondary-color: #f5f5f5
     --bg-secondary-accent-color: #ebebeb
@@ -16,9 +20,17 @@ body
     --text-invert-color: #fff
     --stroke-secondary-color: #b8b8b8
     --action-secondary-color: #ebebeb
-    --accent-color: #3d3bff
-    --accent-secondary-color: #3230bd
+    --accent-color: #9c08a4
+    --accent-secondary-color: #7b0a7d
+    --accent-transparent-color: #9c08a420
+    --accent-transparent-secondary-color: #9c08a430
+    --bg-accent-color: #e6f7ff
+    --text-dangerous-color: #ff7171
+    --bg-dangerous-color: #fb9d9d43
 
 a
     text-decoration: none
     color: inherit
+
+ul, ol
+    list-style-type: none
